[tool.poetry]
name = "nagonbot"
version = "0.1.1"
description = ""
authors = ["Gabriel Fioravante Di Sciascio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.11.0"
numpy = "^1.24.2"
fugashi = "^1.2.1"
unidic-lite = "^1.0.8"
mecab-python3 = "^1.0.6"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
pygame = "^2.1.3"
playsound = "1.2.2"
bs4 = "^0.0.1"
gTTS = "^2.3.1"

[tool.poetry.group.dev.dependencies]
bs4 = "^0.0.1"
tensorflow = "^2.11.0"
numpy = "^1.24.2"
pygame = "^2.1.3"
playsound = "1.2.2"
fugashi = "^1.2.1"
gTTS = "^2.3.1"
unidic-lite = "^1.0.8"
mecab-python3 = "^1.0.6"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
