[metadata]
name  = nagonbot
version = 1.0.2
author = Gabriel Fioravante Di Sciascio (FDSGAB)
maintainer = Gabriel Fioravante Di Sciascio (FDSGAB)
description = Japanese Chatbot
long_description = file: README.md
license = LICENSE.txt
license_content_type = text/markdown
long_description_content_type = text/markdown
url = https://github.com/FDSGAB/nagonbot
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
keywords = python, chatbot, japanese, nagon, bot, artificial intelligence, virtual assistant


[options]
packages = find:
python_requires = >=3.8, <4
include_package_data = True
install_requires =
    keras
    numpy
    selenium
